--- a/checkmate/templates/offcampusView.html
+++ b/checkmate/templates/offcampusView.html
@@ -36,8 +36,8 @@
         <small class="float-end p-2" >{{ post.pub_date }}</small>
         <!-- <i class="fas fa-star" id="fillStar"></i> -->
     </div>
-    <div class="view_box2">
-        <img src="{{ post.user_id.user_image.url }}" alt="profile_image" style="width:50px; height:50px;">
+    <div class="view_box2 row">
+        <img src="{{ post.user_id.user_image.url }}" alt="profile_image" style="width: 30px; height:30px; padding: 0;">
 
         <!-- 프로필이미지 -->
         <p class="col-12 col-md-3"> {{ post.user_id.user_nickname }} </p>
