게시판 수정할때 body안나옴

--- a/checkmate/templates/offcampusUpdate.html
+++ b/checkmate/templates/offcampusUpdate.html
@@ -31,7 +31,7 @@
 			<!-- 사진 업로드 -->
 		</div>
 		<textarea class="body" name="content" cols="130" rows="20" style="resize: none;" placeholder="   이곳에 본문을 작성하세요."
-			value="{{ post.content }}"></textarea>
+			value="">{{ post.content }}</textarea>
 		<!-- 정보 게시판 작성 내용 -->
 		<button type="submit">저장</button>
 	</form>
