--- a/checkmate/templates/domitoryUpdate.html
+++ b/checkmate/templates/domitoryUpdate.html
@@ -32,7 +32,7 @@
 		</div>
 		<hr>
 		<textarea id="content" class="body" name="content" cols="130" rows="20" style="resize: none;" placeholder="   이곳에 본문을 작성하세요."
-		value="{{ post.content }}"></textarea>
+		value="">{{ post.content }}</textarea>
 		<!-- 정보 게시판 작성 내용 -->
 		<button type="submit">저장</button>
 	</form>
