--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -414,7 +414,7 @@
         document.getElementById("filter-dropdown").style.display = "none"
         document.getElementById("filter-dropup").style.display = "inline-block"
     }
-
+    hideFirstModal();
 
     if("{{ survey_ess }}"){
         document.getElementById("first_open_modal").style.display = "none";
@@ -427,11 +427,17 @@
             child.append(txt);
             tr[i+1].append(child);
     }
-    }
+}
     else{
         document.getElementById("first_open_modal").style.display = "block";
         document.getElementById("fitness").style.display = "none"
+        if("{{a}}"){
+
+            document.getElementById("first_open_modal").style.display = "none";
+        }
     }
+
+
 
     function hideFirstModal(){
         document.getElementById("first_open_modal").style.display = "none";
