--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -251,7 +251,7 @@
     </div>
 
     <!-- js -->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'js/survey.js' %}"></script>
 </body>
 </html>
