룸메찾기 date 추가

--- a/roommate/templates/detail.html
+++ b/roommate/templates/detail.html
@@ -34,8 +34,7 @@
             {% endif %}
         </form>
         <div class="float-end">
-            <!-- 모델에 pub_date추가해야함 -->
-            <small class="p-3">2021. 1. 2</small>
+            <small class="p-3">{{ write_detail.pub_date }}</small>
         </div>
     </div>
     <div class="writer-info row">
