--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -22,6 +22,11 @@
             Your password must contain at least 8 characters.
             Your password can’t be a commonly used password.
             Your password can’t be entirely numeric. -->
+            <p># 비밀번호는 귀하의 다른 개인 정보와 유사할 수 없습니다.</p>
+            <p># 비밀번호는 8자 이상이어야 합니다.</p>
+            <p># 1234 등 연속된 숫자를 사용할 수 없습니다.</p>
+            <p># 영문자와 숫자의 조합을 사용해주세요.</p>
+
             이름<br> <input type="text" id='user_name' name='user_name'><br><br><br>
 
             <div class="sign_gender">
@@ -51,6 +56,9 @@
                 <option value="">선택해주세요.</option>
                 <option value="KOR">대한민국</option>
                 <option value="CHN">중국</option>
+                <option value="UZB">우즈베키스탄</option>
+                <option value="IND">인도</option>
+                <option value="ETC">기타</option>
             </select><br><br><br>
             프로필 사진: <input type="file" name="user_image" accept="user_image/*" id="user_image">
             <br><br><br>
