--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -33,7 +33,7 @@
     {% endblock %}
 </head>
 
-<body style="min-width: 300px">
+<body style="min-width: 300px" class="ms-2 ms-md-0">
     <!-- 네비바 -->
     <div class="row">
         <nav class="navbar navbar-expand-md p-4 p-md-5">
