--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -25,7 +25,7 @@
             <p># 비밀번호는 귀하의 다른 개인 정보와 유사할 수 없습니다.</p>
             <p># 비밀번호는 8자 이상이어야 합니다.</p>
             <p># 1234 등 연속된 숫자를 사용할 수 없습니다.</p>
-            <p># 영문자와 숫자의 조합을 사용해주세요.</p>
+            <p># 영문자와 숫자의 조합을 사용해주세요.</p><br><br>
 
             이름<br> <input type="text" id='user_name' name='user_name'><br><br><br>
 
