--- a/static/css/login.css
+++ b/static/css/login.css
@@ -171,5 +171,13 @@
         height: 130px;
         padding-top: 20px;
     }
+    .popup h4{
+        margin-top: 19px;
+    }
+    .title-login{
+        width: 70%;
+        margin: 0 auto 0 auto;
+        text-align: center;
+    }
 
  }
