--- a/roommate/templates/detail.html
+++ b/roommate/templates/detail.html
@@ -239,15 +239,20 @@
         {% endif %}
     </div>
     <div>
-        <form action="{% url 'commnet_action' write.id %}" method="POST">
+        {% if user.is_authenticated %}
+        <form action="{% url 'commnet_action' write_detail.id %}" method="POST">
             {% csrf_token %}
-            <h5>작성하기</h5><textarea cols="20" rows="2"></textarea>
+            <h5>작성하기</h5><textarea cols="20" rows="2" name="comment"></textarea>
             <input type="submit" value="등록">
         </form>
+        {% endif %}
     </div>
     {% for comment in comments %}
     <div>
         <div>{{ comment.writer }} : {{comment.comment}}</div>
+        {% if comment.writer == user.user_nickname %}
+        <a href="{% url 'comment_del' write_detail.id comment.id %}">삭제</a>
+        {% endif %}
     </div>
     {% endfor %}
 </div>
