--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block content %}
 
-{% if success == '1' %}
+{% if success == 1 %}
     <script>
         alert('회원가입이 완료되었습니다.')
     </script>
